--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@types/multer": "^2.0.0",
+    "@types/express": "^5.0.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.2",
-    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
