--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "argon2": "^0.40.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -50,9 +52,7 @@
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.1",
-    "zod": "^3.23.8",
-    "@types/multer": "^2.0.0",
-    "@types/express": "^5.0.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
@@ -77,7 +77,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
