--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.41.3",
+    "date-holidays": "^3.24.4",
     "dayjs": "^1.11.13",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
