update attendance window minutes

--- a/.env.production
+++ b/.env.production
@@ -14,3 +14,5 @@ REFRESH_JWT_EXPIRE_IN=30d
 CLOUDINARY_CLOUD_NAME=dq5t1l0ct
 CLOUDINARY_API_KEY=987469727856688
 CLOUDINARY_API_SECRET=0gX4mzxM8JXX4qLeHvltOVEwNzE
+
+ATTENDANCE_WINDOW_MINUTES=60
