--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed": "ts-node src/seeding/seed.ts",
+    "typeorm": "typeorm-ts-node-commonjs -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate ./src/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- migration:revert",
     "typeorm:migrate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run --dataSource src/data-source.ts",
     "typeorm:migrate:prod": "node ./node_modules/typeorm/cli.js migration:run --dataSource dist/data-source.js"
   },
